# glance_store

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  README.rst  functional_testing.conf.sample  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/drivers/: index.rst
doc/source/reference/: index.rst
doc/source/user/: drivers.rst  index.rst
etc/: rootwrap.conf
etc/glance/rootwrap.d/: glance_cinder_store.filters
etc/rootwrap.d/: glance_cinder_store.filters
glance/: __init__.py
glance.store/locale/: glance.store-log-error.pot  glance.store-log-warning.pot  glance.store.pot
glance.store/locale/de/LC_MESSAGES/: glance.store-log-error.po
glance.store/locale/en_AU/LC_MESSAGES/: glance.store-log-error.po
glance.store/locale/en_GB/LC_MESSAGES/: glance.store-log-critical.po  glance.store-log-error.po
glance.store/locale/es/LC_MESSAGES/: glance.store-log-error.po
glance.store/locale/fr/LC_MESSAGES/: glance.store-log-error.po
glance.store/locale/it/LC_MESSAGES/: glance.store-log-error.po
glance.store/locale/ja/LC_MESSAGES/: glance.store-log-error.po
glance.store/locale/ko_KR/LC_MESSAGES/: glance.store-log-error.po
glance.store/locale/pt_BR/LC_MESSAGES/: glance.store-log-error.po
glance.store/locale/vi_VN/LC_MESSAGES/: glance.store-log-error.po
glance.store/locale/zh_CN/LC_MESSAGES/: glance.store-log-error.po
glance/store/: __init__.py  backend.py  base.py  driver.py  exceptions.py  filesystem.py  i18n.py  location.py
glance/store/_drivers/: cinder.py  filesystem.py  gridfs.py  http.py  rbd.py  s3.py  sheepdog.py  swift.py  vmware_datastore.py
glance/store/common/: auth.py  exception.py  utils.py
glance/store/tests/: base.py  fakes.py  utils.py
glance_store/: __init__.py  backend.py  capabilities.py  driver.py  exceptions.py  i18n.py  location.py  multi_backend.py
glance_store/_drivers/: cinder.py  filesystem.py  gridfs.py  http.py  rbd.py  s3.py  sheepdog.py  vmware_datastore.py
glance_store/_drivers/cinder/: __init__.py  base.py  nfs.py  scaleio.py  store.py
glance_store/_drivers/swift/: __init__.py  buffered.py  connection_manager.py  store.py  utils.py
glance_store/common/: attachment_state_manager.py  auth.py  cinder_utils.py  config.py  fs_mount.py  utils.py
glance_store/locale/: glance.store-log-error.pot  glance.store-log-warning.pot  glance.store.pot  glance_store-log-critical.pot  glance_store-log-error.pot  glance_store-log-warning.pot  glance_store.pot
glance_store/openstack/common/: _i18n.py  excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  log.py  network_utils.py  processutils.py  strutils.py
glance_store/tests/: base.py  fakes.py  utils.py
glance_store/tests/etc/: glance-swift.conf
glance_store/tests/functional/: README.rst  base.py  test_functional.py
glance_store/tests/unit/: test_backend.py  test_backend_group_configuration.py  test_cinder_base.py  test_cinder_store.py  test_connection_manager.py  test_driver.py  test_exceptions.py  test_filesystem_store.py  test_filesystem_store_base.py  test_gridfs_store.py  test_http_store.py  test_location.py  test_multistore_cinder.py  test_multistore_filesystem.py  test_multistore_rbd.py  test_multistore_s3.py  test_multistore_sheepdog.py  test_multistore_vmware.py  test_opts.py  test_rbd_store.py  test_rbd_store_base.py  test_s3_store.py  test_s3_store_base.py  test_sheepdog_store.py  test_store_base.py  test_store_capabilities.py  test_swift_store.py  test_swift_store_multibackend.py  test_swift_store_utils.py  test_test_utils.py  test_utils.py  test_vmware_store.py  test_vmware_store_base.py
releasenotes/notes/: 0.29.1-notes-ded2a1d473a306c7.yaml  Stein_final_release-c7df5838028b8c7e.yaml  add-backend-defaults-group-4c320deac0f234ee.yaml  add-store-weight-d443fbea8cc8d4c9.yaml  block-creating-encrypted-nfs-volumes-d0ff370ab762042e.yaml  bug-1620999-8b76a0ad14826197.yaml  bug-1820817-0ee70781918d232e.yaml  bug-1915602-fcc807a435d8a6bf.yaml  bug-1954883-3666d63a3c0233f1.yaml  bug-2004555-4fd67fce86c07461.yaml  cinder-application-credential-support.yaml  cinder-attachment-retry-38db6999290825d5.yaml  cinder-fix-nfs-sparse-vol-create-76631ce05f86257c.yaml  cinder-nfs-block-qcow2-vol-4fed58b0afafc980.yaml  cinder-support-extend-in-use-volume-c6292f950ff75cca.yaml  deprecate-filesystem_store_datadirs-40c54304cae4e11a.yaml  deprecate-rados_connect_timeout-767ed1eaa026196e.yaml  deprecate-sheepdog-driver-1f9689c327f313d4.yaml  deprecate-store_add_to_backend-f419e5c4210613d2.yaml  deprecate-store_capabilities_update_min_interval-039389fa296e2494.yaml  deprecate-vmware-store-2f720c6074b843b0.yaml  drop-py-2-7-345cafc9c1d3f892.yaml  filesystem-timeout-protection.yaml  fix-exception-logging-during-attach-9546e24189db83c4.yaml  fix-interval-in-retries-471155ff34d9f0e9.yaml  fix-ip-in-connector-info-36b95d9959f10f63.yaml  fix-legacy-image-update-49a149ec267dccb6.yaml  fix-multiattach-multiprocessing-56120e9fa7c40cc8.yaml  fix-rados_connect_timeout-39e5074bc1a3b65b.yaml  fix-rbd-lockup-3aa2bb86f7d29e19.yaml  fix-scaleio-download-image-2563cb2681895d0e.yaml  fix-swift-chunked-upload-size-validation-08f33e3d77a05643.yaml  fix-swift-download-none-retry-2f5c8d1a4b9e6c73.yaml  fix-wait-device-resize-c282940b71a3748e.yaml  fs-drv-chunk-sz-a1b2f6a72fad92d5.yaml  handle-sparse-image-a3ecfc4ae1c00d48.yaml  improved-configuration-options-3635b56aba3072c9.yaml  lock_path-cef9d6f5f52c3211.yaml  move-rootwrap-config-f2cf435c548aab5c.yaml  multi-store-0c004fc8aba2a25d.yaml  (+35 more)
releasenotes/source/: conf.py  index.rst
tests/unit/: test_cinder_store.py  test_filesystem_store.py  test_gridfs_store.py  test_http_store.py  test_opts.py  test_rbd_store.py  test_s3_store.py  test_sheepdog_store.py  test_store_base.py  test_store_capabilities.py  test_swift_store.py  test_swift_store_utils.py  test_utils.py  test_vmware_store.py
tools/: colorizer.py  install_venv.py  install_venv_common.py  tox_install.sh
(+49 files in other folders)
