[metadata]
name = glance.store
summary = OpenStack Image Service Store Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Development Status :: 4 - Alpha
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    glance
    glance.store
namespace_packages =
    glance

[entry_points]
glance.store.drivers =
    file = glance.store._drivers.filesystem:Store
    http = glance.store._drivers.http:Store
    vmware = glance.store._drivers.vmware_datastore:Store

# TESTS ONLY
    no_conf = glance.store.tests.fakes:UnconfigurableStore
[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
