[metadata]
name = glance_store
summary = OpenStack Image Service Store Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/glance_store
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    glance_store

[entry_points]
glance_store.drivers =
    file = glance_store._drivers.filesystem:Store
    http = glance_store._drivers.http:Store
    swift = glance_store._drivers.swift:Store
    rbd = glance_store._drivers.rbd:Store
    sheepdog = glance_store._drivers.sheepdog:Store
    cinder = glance_store._drivers.cinder:Store
    vmware = glance_store._drivers.vmware_datastore:Store

    # TESTS ONLY
    no_conf = glance_store.tests.fakes:UnconfigurableStore

    # Backwards compatibility
    glance.store.filesystem.Store = glance_store._drivers.filesystem:Store
    glance.store.http.Store = glance_store._drivers.http:Store
    glance.store.swift.Store = glance_store._drivers.swift:Store
    glance.store.rbd.Store = glance_store._drivers.rbd:Store
    glance.store.sheepdog.Store = glance_store._drivers.sheepdog:Store
    glance.store.cinder.Store = glance_store._drivers.cinder:Store
    glance.store.vmware_datastore.Store = glance_store._drivers.vmware_datastore:Store

oslo.config.opts =
    glance.store = glance_store.backend:_list_opts

console_scripts =
    glance-rootwrap = oslo_rootwrap.cmd:main

[extras]
# Dependencies for each of the optional stores
vmware =
  oslo.vmware>=2.17.0 # Apache-2.0
swift =
  httplib2>=0.7.5 # MIT
  python-swiftclient>=3.2.0 # Apache-2.0
cinder =
  python-cinderclient>=2.0.1 # Apache-2.0
  os-brick>=1.8.0 # Apache-2.0
  oslo.rootwrap>=5.0.0 # Apache-2.0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
autodoc_tree_index_modules = True
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = glance_store/locale
domain = glance_store

[update_catalog]
domain = glance_store
output_dir = glance_store/locale
input_file = glance_store/locale/glance_store.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = glance_store/locale/glance_store.pot

[wheel]
universal = 1
